fix: refresh calendars when exchanging calendar token